--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -81,6 +81,13 @@
   <script type="text/javascript"
     src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  <!--jQuery 07182022-->
+
+
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
@@ -153,7 +160,7 @@
     <div class="Grid Grid--full u-textCenter wrapper">
       <div class="Grid-cell">
         <div class="element">
-          <img class="shadowFilterL" src="Hi-fi_Landing.svg" alt="team member">
+          <img class="shadowFilterL" id="draggable" src="Hi-fi_Landing.svg" alt="team member">
         </div>
       </div>
       <div class="blankHS"></div>
@@ -202,6 +209,7 @@
         </div>
       </div>
     </div>
+
   </div>
 
   <main class="">
@@ -911,7 +919,7 @@
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingChangepassword.gif"
+              <div class="element"> <img class="cardAPPOINTA shadowBox" src="testingChangepassword.gif"
                   alt="New User">
               </div>
             </div>
@@ -960,7 +968,7 @@
             </div>
 
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingNewUser.gif" alt="New User">
+              <div class="element"> <img class="cardAPPOINTA shadowBox" src="testingNewUser.gif" alt="New User">
               </div>
             </div>
           </div>
@@ -1042,7 +1050,7 @@
             </div>
 
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingExistingUser.gif"
+              <div class="element"> <img class="cardAPPOINTA shadowBox" src="testingExistingUser.gif"
                   alt="Existing User"></div>
             </div>
 
@@ -1110,7 +1118,7 @@
             </div>
 
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingInviteLinks.gif"
+              <div class="element"> <img class="cardAPPOINTA shadowBox" src="testingInviteLinks.gif"
                   alt="New User">
               </div>
             </div>
@@ -1149,7 +1157,7 @@
             </div>
 
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingMemberOnboarding.gif"
+              <div class="element"> <img class="cardAPPOINTA shadowBox" src="testingMemberOnboarding.gif"
                   alt="New User">
               </div>
             </div>
@@ -1195,7 +1203,7 @@
             </div>
 
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingCandidate.gif"
+              <div class="element"> <img class="cardAPPOINTA" src="testingCandidate.gif"
                   alt="New User">
               </div>
             </div>
@@ -1342,15 +1350,15 @@
                   <label class="label_testimonial-3" for="radio_testimonial-3">Interview
                     types</label>
                   <div class="content-test">
-                    <img class="shadowFilterL" src="Hi-fi_IntervieTypes.svg" alt="team member">
+                    <img class="shadowFilterL" src="Hi-fi_InterviewTypes.svg" alt="team member">
 
                   </div>
                 </li>
                 <li class="item">
                   <input type="radio" id="radio_testimonial-4" name="basic_carousel" />
-                  <label class="label_testimonial-4" for="radio_testimonial-4">Interview set</label>
+                  <label class="label_testimonial-4" for="radio_testimonial-4">Interview sets</label>
                   <div class="content-test">
-                    <img class="shadowFilterL" src="Hi-fi_TeamMember.svg" alt="team member">
+                    <img class="shadowFilterL" src="Hi-fi_InterviewSets.svg" alt="team member">
                   </div>
                 </li>
                 <li class="item">
@@ -1366,7 +1374,7 @@
           </div>
           <div class="Grid-cell">
             <div class="element">
-              <h3 class="u-textCenter"> Key hi-fi screens </h3>
+              <h3 class="u-textCenter"> Hi-fi screens </h3>
             </div>
           </div>
         </div>
@@ -1374,19 +1382,6 @@
         <div class="blankHS"></div>
 
 
-        <div class="Grid Grid--full u-textCenter wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <img class="shadowFilterL" src="Hi-fi_IntervieTypes.svg" alt="team member">
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element">
-              <h3 class=""> Create interview </h3>
-            </div>
-          </div>
-
-        </div>
         <div class="blankHS"></div>
 
 
