--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
   <!-- header -->
   <nav class="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer">VW
-      </a>
+      <a href="http://vickywang.me/" class="logo pointer colorGreen">VW</a>
+
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/project" class=" nav-link box">PROJECT</a></li>
+          <li class="nav-item inactive "><a href="/project" class=" nav-link box font300-1080 ">PROJECT</a></li>
           <li class="nav-item inactive"><a href="/architecture"
-              class="nav-link box">ARCHITECTURE</a>
+              class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+          <li class="nav-item inactive"><a href="/photography" class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
           <li class="nav-item active greenNav"><a href="/" class="nav-link box">ABOUT</a></li>
         </ul>
