--- a/index.html
+++ b/index.html
@@ -147,11 +147,13 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/project" class=" nav-link box font300-1080 ">PROJECT</a></li>
+          <li class="nav-item inactive "><a href="/project"
+              class=" nav-link box font300-1080 ">PROJECT</a></li>
           <li class="nav-item inactive"><a href="/architecture"
               class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
-          <li class="nav-item inactive"><a href="/photography" class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
+          <li class="nav-item inactive"><a href="/photography"
+              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
           <li class="nav-item active greenNav"><a href="/" class="nav-link box">ABOUT</a></li>
         </ul>
@@ -175,7 +177,9 @@
 
     <div class="intro" data-aos="fade-up">
       <div class="column">
-        <h1 class="t-hi">I'm Vicky.</h1>
+        <strong>
+          <h1 class="t-hi">I'm Vicky.</h1>
+        </strong>
       </div>
       <p class="divider"></p>
       <div class="column">
@@ -225,16 +229,15 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox">
-            <h4 class=>The way to use</h4>
+            <h4 class="allCaps">The way to use</h4>
             <div class="lineHorizS"></div>
-            <div class="blankHXS"></div>
-            <h3>
-              Solving problems by understand user &#38; product
-            </h3>
+
+            <h5> <strong> Solving problems by understand user &#38; product
+              </strong> </h5>
+
             <ul>
               <li> Understand users </li>
-              <li> Understand the product</li>
-              <li> Understand business </li>
+              <li> Understand business &#38; product</li>
             </ul>
           </div>
         </div>
@@ -242,10 +245,10 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox">
-            <h4 class=>The way to integrate </h4>
+            <h4 class="allCaps">The way to integrate </h4>
             <div class="lineHorizS"></div>
-            <div class="blankHXS"></div>
-            <h3>Simplicity is the key “Less is More” </h3>
+            <h5> <strong>Simplicity is the key “Less is More” </strong> </h5>
+
             <ul>
               <li> Consider existing user flow</li>
               <li> Thoughtful placement of design elements, eliminate redundancy </li>
@@ -256,12 +259,10 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner ShadowBox">
-            <h4>The way to built </h4>
+            <h4 class="allCaps">The way to built </h4>
             <div class="lineHorizS"></div>
-            <div class="blankHXS"></div>
-
-            <h3> Quality of design &#38; Implement </h3>
-
+            <h5> <strong> Quality of design &#38; Implement
+              </strong> </h5>
             <ul>
               <li> Undersdand design system in Figma</li>
               <li> Reuse the existing components</li>
@@ -328,6 +329,7 @@
             <li class="progress__item progress__item--active">
               <strong>
                 <h3>Product design </h3>
+
                 <ul>
                   <li>I am interested in product design because I enjoy the challenge of
                     transforming the physical world into digital flows</li>
@@ -376,7 +378,8 @@
       <div class="Grid-cell ">
         <div class="element ">
           <div class="elementInner ShadowBox ">
-            <h3>Creative & Collaborative </h3>
+            <h3 class="allCaps">Creative & Collaborative </h3>
+
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <h5>
@@ -391,10 +394,11 @@
         </div>
       </div>
 
-      <div class="Grid-cell ">
-        <div class="element ">
+      <div class="Grid-cell">
+        <div class="element">
           <div class="elementInner ShadowBox ">
-            <h3 class=>Transparency </h3>
+
+            <h3 class="allCaps">Transparency </h3>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
 
