--- a/photography/index.html
+++ b/photography/index.html
@@ -150,7 +150,7 @@
   <!--intro-->
   <div class="wrapper element">
     <div class="intro">
-      <div class="t-hello">HELLO, </div>
+      <strong> <h1 class="t-hi">I'm Vicky.</h1></strong>  
     </div>
     <div class="blankHXS"></div>
 
