--- a/project/index.html
+++ b/project/index.html
@@ -149,7 +149,7 @@
 
     <div class="intro" data-aos="fade-up">
       <div class="column">
-        <h1 class="t-hi">I'm Vicky.</h1>
+     <strong> <h1 class="t-hi">I'm Vicky.</h1></strong>  
       </div>
       <p class="divider"></p>
       <div class="column">
