--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -209,6 +209,99 @@
     </div>
 
   </div>
+  <div class="blankHM"></div>
+
+  <div class="wrapper">
+
+    <div class="Grid Grid--gutters Grid--1of3 ">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4 class="allCaps colorAPPOINTA">Interview type</h4>
+          <ul>
+            <li>Create different type of interview</li>
+            <li>Add required interview skills</li>
+
+          </ul>
+  
+        </div>
+      </div>
+  
+      <div class="Grid-cell">
+        <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewType.gif"
+            alt="New User">
+        </div>
+      </div>
+    </div>
+    <div class="blankHM"></div>
+
+    <div class="Grid Grid--gutters Grid--1of3 ">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4 class="allCaps colorAPPOINTA">Interview set</h4>
+          <ul>
+            <li class="">Combine interviews as a set of interview </li>
+            <li class="">Edit or reorder interviews</li>
+          </ul>
+  
+        </div>
+      </div>
+  
+      <div class="Grid-cell">
+        <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewSet.gif"
+            alt="New User">
+        </div>
+      </div>
+    </div>
+    <div class="blankHM"></div>
+
+    <div class="Grid Grid--gutters Grid--1of3 ">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4 class="allCaps colorAPPOINTA">Invite team</h4>
+          <ul>
+            <li>Invite team members with emails</li>
+            <li>Invite team members with a link</li>
+
+          </ul>
+  
+        </div>
+      </div>
+  
+      <div class="Grid-cell">
+        <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewTeam.gif"
+            alt="New User">
+        </div>
+      </div>
+    </div>
+    <div class="blankHM"></div>
+
+    <div class="Grid Grid--gutters Grid--1of3 ">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4 class="allCaps colorAPPOINTA">Interview skills</h4>
+          <ul>
+            <li>Add &#38; remove skills </li>
+            <li>Add &#38; remove team members </li>
+
+          </ul>
+  
+        </div>
+      </div>
+  
+      <div class="Grid-cell">
+        
+        <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewSkills.gif"
+            alt="New User">
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
 
   <main class="">
     <nav class="section-nav APPOINTA">
