ABOUT PAGE UPDATE

--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
               <li> Understand users </li>
               <li> Understand business &#38; product</li>
             </ul>
+            <div class="blankHXS"></div>
+
           </div>
         </div>
       </div>
@@ -253,6 +255,8 @@
               <li> Consider existing user flow</li>
               <li> Thoughtful placement of design elements, eliminate redundancy </li>
             </ul>
+            <div class="blankHXS"></div>
+
           </div>
         </div>
       </div>
@@ -269,6 +273,8 @@
               <li> Standardized grid system</li>
 
             </ul>
+            <div class="blankHXS"></div>
+
           </div>
         </div>
       </div>
