--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -211,90 +211,97 @@
   </div>
   <div class="blankHM"></div>
 
-  <div class="wrapper">
+  <div class=" colorBgAPPOINTA">
+    <div class="blankHM"></div>
 
-    <div class="Grid Grid--gutters Grid--1of3 ">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4 class="allCaps colorAPPOINTA">Interview type</h4>
-          <ul>
-            <li>Create different type of interview</li>
-            <li>Add required interview skills</li>
+    <div class="wrapper">
+      <div class="Grid Grid--gutters Grid--1of3 Grid--center">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4 class="allCaps colorAPPOINTA">Interview type</h4>
+            <ul>
+              <li>Create different type of interview</li>
+              <li>Add required interview skills</li>
 
-          </ul>
-  
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="Grid-cell">
+          <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewType.gif"
+              alt="New User">
+          </div>
         </div>
       </div>
+      <div class="blankHM"></div>
+
+      <div class="Grid Grid--gutters Grid--1of3 Grid--center">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4 class="allCaps colorAPPOINTA">Interview set</h4>
+            <ul>
+              <li class="">Combine interviews as a set of interview </li>
+              <li class="">Edit or reorder interviews</li>
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="Grid-cell">
+          <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewSet.gif"
+              alt="New User">
+          </div>
+        </div>
+      </div>
+      <div class="blankHM"></div>
+
+      <div class="Grid Grid--gutters Grid--1of3 Grid--center">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4 class="allCaps colorAPPOINTA">Invite team</h4>
+            <ul>
+              <li>Invite team members with emails</li>
+              <li>Invite team members with a link</li>
+
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="Grid-cell">
+          <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewTeam.gif"
+              alt="New User">
+          </div>
+        </div>
+      </div>
+
+      <div class="blankHM"></div>
+
+      <div class="Grid Grid--gutters Grid--1of3 Grid--center">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4 class="allCaps colorAPPOINTA">Interview skills</h4>
+            <ul>
+              <li>Add &#38; remove skills </li>
+              <li>Add &#38; remove team members </li>
   
-      <div class="Grid-cell">
-        <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewType.gif"
-            alt="New User">
+            </ul>
+  
+          </div>
+        </div>
+  
+        <div class="Grid-cell">
+  
+          <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewSkills.gif"
+              alt="New User">
+          </div>
         </div>
       </div>
     </div>
     <div class="blankHM"></div>
 
-    <div class="Grid Grid--gutters Grid--1of3 ">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4 class="allCaps colorAPPOINTA">Interview set</h4>
-          <ul>
-            <li class="">Combine interviews as a set of interview </li>
-            <li class="">Edit or reorder interviews</li>
-          </ul>
-  
-        </div>
-      </div>
-  
-      <div class="Grid-cell">
-        <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewSet.gif"
-            alt="New User">
-        </div>
-      </div>
-    </div>
-    <div class="blankHM"></div>
 
-    <div class="Grid Grid--gutters Grid--1of3 ">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4 class="allCaps colorAPPOINTA">Invite team</h4>
-          <ul>
-            <li>Invite team members with emails</li>
-            <li>Invite team members with a link</li>
-
-          </ul>
-  
-        </div>
-      </div>
-  
-      <div class="Grid-cell">
-        <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewTeam.gif"
-            alt="New User">
-        </div>
-      </div>
-    </div>
-    <div class="blankHM"></div>
-
-    <div class="Grid Grid--gutters Grid--1of3 ">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4 class="allCaps colorAPPOINTA">Interview skills</h4>
-          <ul>
-            <li>Add &#38; remove skills </li>
-            <li>Add &#38; remove team members </li>
-
-          </ul>
-  
-        </div>
-      </div>
-  
-      <div class="Grid-cell">
-        
-        <div class="element"> <img class="cardAPPOINTA shadowBox" src="hi-fi_interviewSkills.gif"
-            alt="New User">
-        </div>
-      </div>
-    </div>
   </div>
 
 
@@ -1425,8 +1432,8 @@
 
           <div class="blankHS"></div>
           <div class="wrapper">
-            <div id="flex-container" class=" cardAPPOINTA">
-              <div id="left-zone">
+            <div class="flex-container cardAPPOINTA">
+              <div class="left-zone">
                 <ul class="list">
                   <li class="item">
                     <input type="radio" id="radio_testimonial-1" name="basic_carousel"
@@ -1472,22 +1479,23 @@
                   </li>
                 </ul>
               </div>
-              <div id="right-zone"></div>
+              <div class="right-zone"></div>
             </div>
+
+
+
             <div class="Grid-cell">
               <div class="element">
                 <h3 class="u-textCenter"> Hi-fi screens </h3>
               </div>
             </div>
           </div>
+
+
         </section>
         <div class="blankHS"></div>
-        <section id="screens">
-          <div class="wrapper">
-            <iframe style="border: 6px solid rgba(255, 255, 255, 0.9);     border-radius: 35px;
-          " width="100%" height="920"
-              src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F0APvIwRfsXK7XTGaBXhD05%2FAPPOINTA%3Fpage-id%3D501%253A9560%26node-id%3D501%253A9561%26viewport%3D1138%252C453%252C0.48%26scaling%3Dscale-down%26starting-point-node-id%3D501%253A9561%26hotspot-hints%3D0"></iframe>
-          </div>
+        <section id="prototype">
+
         </section>
         <div class="blankHS"></div>
 
@@ -1507,7 +1515,42 @@
             </div>
           </div>
           <!-- Arrow -->
+       
+          <div class="wrapper">
+            <div class="flex-container cardAPPOINTA">
+              <div class="left-zone">
+                <ul class="list">
+                  <li class="item">
+                    <input type="radio" id="xx" name="UI"
+                      checked="checked" />
+                    <label class="xx" for="xx">Landing
+                      page</label>
+                    <div class="content-test">
+                      <img class="shadowFilterL" src="Hi-fi_Landing.svg" alt="team member">
+                    </div>
+                  </li>
+                  <li class="item">
+                    <input type="radio" id="xx2" name="UI" />
+                    <label class="xx2" for="xx2">xxxxxx1</label>
+                    <div class="content-test">
+                      <img class="shadowFilterL" src="Hi-fi_Interviews.svg" alt="team member">
 
+                    </div>
+                  </li>
+
+                </ul>
+              </div>
+              <div class="right-zone"></div>
+            </div>
+
+
+
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="u-textCenter"> UI Components </h3>
+              </div>
+            </div>
+          </div>
           <!-- UI -->
           <div class="Grid Grid--full u-textCenter wrapper">
             <div class="Grid-cell">
